--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
+  <header>
+    <nav>
   <a href="index.html" class="brand">Bugatti Chiron Super Sport 300+</a>
   <ul class="menu">
     <li><a href="#">Inicio</a></li>
@@ -17,9 +19,26 @@
   <div class="menu-btn">
     <i class="fa fa-bars" aria-hidden="true"></i>
   </div>
+</nav>
   <div class="header-body">
-  </div>
-  <h1></h1>
+  <div>
+  <h1>Junte-se a nós</h1>
+  <p>
+   O monstro sobre rodas é equipado com um motor W16 quadriturbo de 8.0 litros, capaz de render insanos 1.600 cv de potência e colossais 163,1 kgf. m torque.
+  </p>
+</header>
+<section class="about">
+    <div class="heading">
+    <h2>take a journey, <br/>
+         bend space
+        </h2>
+        <p>
+            A Bugatti anunciou o Super Sport 300+ em setembro de 2019, pouco depois do recorde de velocidade. Começou a ser entregue em 2021, quando a marca mostrou as oito primeiro unidades fabricadas. Em janeiro deste ano, o Chiron teve todas as suas unidades remanescentes encomendadas e faltava somente a marca produzir os carros. Ainda faltam entregar 80 veículos.
+        </p>
+    </div>
+    <div class="infos">
+        <div class="info">
+
 
 
   <body></body>
