--- a/index.html
+++ b/index.html
@@ -1,170 +1,176 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bugatti Chiron Super Sport 300+</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
-      integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-  </head>
-  <body>
-    <header>
-      <nav>
-        <a href="index.html" class="brand">Bugatti Chiron Super Sport 300+</a>
-        <ul class="menu">
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Garagem</a></li>
-          <li><a href="#">Noticias</a></li>
-          <li><a href="#" class="btn">Comprar</a></li>
-        </ul>
-        <div class="menu-btn">
-          <i class="fa fa-bars" aria-hidden="true"></i>
-        </div>
-      </nav>
-      <div class="header-body">
-        <h1>Junte-se a nós</h1>
-        <p>
-          O monstro sobre rodas é equipado com um motor W16 quadriturbo de 8.0
-          litros, capaz de render insanos 1.600 cv de potência e colossais 163,1
-          kgf. m torque.
-        </p>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bugatti Chiron Super Sport 300+</title>
+  <link rel="stylesheet" href="style.css" />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    integrity="sha512-pJU9A6Z+gYJN7eyGZPv+2q5DpiEgsrvxIJc/m+5JPeAVqCZX62yuNT++Di5GKaEUNk5T9rtZz30Cx9Nq1N64ig=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
+</head>
+<body>
+  <header>
+    <nav>
+      <a href="index.html" class="brand">Bugatti Chiron Super Sport 300+</a>
+      <ul class="menu">
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Garagem</a></li>
+        <li><a href="#">Noticias</a></li>
+        <li><a href="#" class="btn">Comprar</a></li>
+      </ul>
+      <div class="menu-btn">
+        <i class="fas fa-bars"></i>
       </div>
-    </header>
-    <section class="about">
-      <div class="heading">
-        <h2>
-          take a journey, <br />
-          bend space
-        </h2>
-        <p>
-          A Bugatti anunciou o Super Sport 300+ em setembro de 2019, pouco
-          depois do recorde de velocidade. Começou a ser entregue em 2021,
-          quando a marca mostrou as oito primeiro unidades fabricadas. Em
-          janeiro deste ano, o Chiron teve todas as suas unidades remanescentes
-          encomendadas e faltava somente a marca produzir os carros. Ainda
-          faltam entregar 80 veículos.
-        </p>
-      </div>
-      <div class="infos">
-        <div class="info">
-          <img
-            src="assets/imgs/icons8-aviso-de-caixa-de-velocidades-automática-96.png"
-            alt="icon"
-          />
-          <div>
-            <h3>Cavalos</h3>
-            <p>
-              O motor W16 de 8.0 litros, que passou a entregar 1.600 cv de
-              potência, um acréscimo significativo de 100 cv.
-            </p>
-          </div>
-        </div>
-        <div class="info">
-          <img src="assets/imgs/icons8-velocidade-100.png" alt="icon" />
-          <div>
-            <h3>Performance</h3>
-            <p>
-              Alcançou incríveis 482 km/h superando as medições anteriores da
-              própria Bugatti.
-            </p>
-          </div>
-        </div>
-        <div class="info">
-          <img src="assets/imgs/icons8-relâmpago-100.png" alt="icon" />
-          <div>
-            <h3>Velocidade Máxima</h3>
-            <p>
-              Com uma velocidade máxima de 490,48 km/h, esse supercarro é
-              equipado com um motor de 8 litros e 16 cilindros, capaz de gerar
-              incríveis 1.578 cv de potência.
-            </p>
-          </div>
+    </nav>
+    <div class="header-body">
+      <h1>Bugatti Chiron Super Sport 300+</h1>
+      <p>
+        O monstro sobre rodas é equipado com um motor W16 quadriturbo de 8.0
+        litros, capaz de render insanos 1.600 cv de potência e colossais 163,1
+        kgf. m torque.
+      </p>
+    </div>
+  </header>
+  <section class="about">
+    <div class="heading">
+      <h2>
+        Carro mais rápido do mundo, <br />
+        teve sua produção encerrada.
+      </h2>
+      <p>
+        A Bugatti anunciou o Super Sport 300+ em setembro de 2019, pouco
+        depois do recorde de velocidade. Começou a ser entregue em 2021,
+        quando a marca mostrou as oito primeiro unidades fabricadas. Em
+        janeiro deste ano, o Chiron teve todas as suas unidades remanescentes
+        encomendadas e faltava somente a marca produzir os carros. Ainda
+        faltam entregar 80 veículos.
+      </p>
+    </div>
+    <div class="infos">
+      <div class="info">
+        <img
+          src="assets/imgs/icons8-aviso-de-caixa-de-velocidades-automática-96.png"
+          alt="icon"
+        />
+        <div>
+          <h3>Cavalos</h3>
+          <p>
+            O motor W16 de 8.0 litros, que passou a entregar 1.600 cv de
+            potência, um acréscimo significativo de 100 cv.
+          </p>
         </div>
       </div>
-    </section>
-    <section class="specs">
-      <div>
-        <div class="specs-header">
-          <h2>Especificações Técnicas</h2>
-          <span>Motor</span>
-        </div>
-        <ul>
-          <li>
-            <span>Velocidade Máxima</span>
-            <span>490,48 km/h</span>
-          </li>
-          <li>
-            <span>Máximo Poder</span>
-            <span>1.600 cv de potência.</span>
-          </li>
-          <li>
-            <span>Máximo Torque</span>
-            <span>163,1 kgf. m (1.600 N.m)</span>
-          </li>
-          <li>
-            <span>RPM</span>
-            <span>2.000 rpm.</span>
-          </li>
-          <li>
-            <span>Peso</span>
-            <span>1.996 kg</span>
-          </li>
-          <li>
-            <span>Diâmetro dos cilindros x Curso dos pistões</span>
-            <span>3.39 x 3.39 polegadas 86.0 x 86.0 mm</span>
-          </li>
-          <li>
-            <span>Aspiração</span>
-            <span>4 x Turbo + Intercooler</span>
-          </li>
-          <li>
-            <span>Potência</span>
-            <span>1577 HP / 1599 PS / 1176 kW @ - rpm</span>
-          </li>
-          <li>
-            <span>Turbo Compressor</span>
-            <span>4</span>
-          </li>
-        </ul>
-      </div>
-    </section>
-    <section class="panels">
-      <div class="panels-sm">
-        <div class="panel">
-          <div>
-            <div class="icon">
-              <i class="fa-solid fa-fire"></i>
-            </div>
-            <h2>Potência e Velocidade</h2>
-            <a href="#">
-              <span>Saiba Mais</span>
-              <i class="fa fa-arrow-right"></i>
-            </a>
-          </div>
-        </div>
-        <div class="panel"></div>
-        <div class="panel"></div>
-        <div class="panel">
-          <div>
-            <div class="icon">
-              <i class="fa fa-droplet"></i>
-            </div>
-            <h2>Preço de 3,8 milhões de euros.</h2>
-          </div>
+      <div class="info">
+        <img src="assets/imgs/icons8-velocidade-100.png" alt="icon" />
+        <div>
+          <h3>Performance</h3>
+          <p>
+            Alcançou incríveis 482 km/h superando as medições anteriores da
+            própria Bugatti.
+          </p>
         </div>
       </div>
-      <div class="panel-lg"></div>
-    </section>
-    <section class="car-stats">
-      <div>
-        <h1
-        class="coun">
-    </section>
-  </body>
+      <div class="info">
+        <img src="assets/imgs/icons8-relâmpago-100.png" alt="icon" />
+        <div>
+          <h3>Velocidade Máxima</h3>
+          <p>
+            Com uma velocidade máxima de 490,48 km/h, esse supercarro é
+            equipado com um motor de 8 litros e 16 cilindros, capaz de gerar
+            incríveis 1.578 cv de potência.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="specs">
+    <div>
+      <div class="specs-header">
+        <h2>Especificações Técnicas</h2>
+        <span>Motor</span>
+      </div>
+      <ul>
+        <li>
+          <span>Velocidade Máxima</span>
+          <span>490,48 km/h</span>
+        </li>
+        <li>
+          <span>Máximo Poder</span>
+          <span>1.600 cv de potência.</span>
+        </li>
+        <li>
+          <span>Máximo Torque</span>
+          <span>163,1 kgf. m (1.600 N.m)</span>
+        </li>
+        <li>
+          <span>RPM</span>
+          <span>2.000 rpm.</span>
+        </li>
+        <li>
+          <span>Peso</span>
+          <span>1.996 kg</span>
+        </li>
+        <li>
+          <span>Diâmetro dos cilindros x Curso dos pistões</span>
+          <span>3.39 x 3.39 polegadas 86.0 x 86.0 mm</span>
+        </li>
+        <li>
+          <span>Aspiração</span>
+          <span>4 x Turbo + Intercooler</span>
+        </li>
+        <li>
+          <span>Potência</span>
+          <span>1577 HP / 1599 PS / 1176 kW @ - rpm</span>
+        </li>
+        <li>
+          <span>Turbo Compressor</span>
+          <span>4</span>
+        </li>
+      </ul>
+    </div>
+  </section>
+  <section class="panels">
+    <div class="panels-sm">
+      <div class="panel">
+        <div>
+          <div class="icon">
+            <i class="fa fa-fire" aria-hidden="true"></i>
+          </div>
+          <h2>Potência e Velocidade</h2>
+          <a href="#">
+            <span>Saiba Mais</span>
+            <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="panel"></div>
+      <div class="panel"></div>
+      <div class="panel">
+        <div>
+          <div class="icon">
+            <i class="fa fa-tint" aria-hidden="true"></i>
+          </div>
+          <h2>Preço de 3,8 milhões de euros.</h2>
+        </div>
+      </div>
+    </div>
+    <div class="panel-lg"></div>
+  </section>
+  <section class="car-stats">
+    <div>
+      <h1
+      class="counter"
+      data-target="206"
+      data-speed="10"
+      >0
+      </h1>
+      <h1>kmph</h1>
+    </div>
+  </section>
+</body>
 </html>
