arrumando os icons

--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bugatti Chiron Super Sport 300+</title>
   <link rel="stylesheet" href="style.css" />
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    integrity="sha512-pJU9A6Z+gYJN7eyGZPv+2q5DpiEgsrvxIJc/m+5JPeAVqCZX62yuNT++Di5GKaEUNk5T9rtZz30Cx9Nq1N64ig=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
   <header>
     <nav>
@@ -24,7 +20,7 @@
         <li><a href="#" class="btn">Comprar</a></li>
       </ul>
       <div class="menu-btn">
-        <i class="fas fa-bars"></i>
+        <i class="fa-solid fa-bars"></i>
       </div>
     </nav>
     <div class="header-body">
@@ -53,10 +49,7 @@
     </div>
     <div class="infos">
       <div class="info">
-        <img
-          src="assets/imgs/icons8-aviso-de-caixa-de-velocidades-automática-96.png"
-          alt="icon"
-        />
+        <img src="assets/imgs/icons8-aviso-de-caixa-de-velocidades-automática-96.png" alt="icon" />
         <div>
           <h3>Cavalos</h3>
           <p>
@@ -139,12 +132,12 @@
       <div class="panel">
         <div>
           <div class="icon">
-            <i class="fa fa-fire" aria-hidden="true"></i>
+            <i class="fa-solid fa-fire"></i>
           </div>
           <h2>Potência e Velocidade</h2>
           <a href="#">
             <span>Saiba Mais</span>
-            <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
+            <i class="fa-regular fa-arrow-right"></i>
           </a>
         </div>
       </div>
@@ -153,7 +146,7 @@
       <div class="panel">
         <div>
           <div class="icon">
-            <i class="fa fa-tint" aria-hidden="true"></i>
+            <i class="fa-solid fa-droplet"></i>
           </div>
           <h2>Preço de 3,8 milhões de euros.</h2>
         </div>
@@ -163,14 +156,11 @@
   </section>
   <section class="car-stats">
     <div>
-      <h1
-      class="counter"
-      data-target="206"
-      data-speed="10"
-      >0
+      <h1 class="counter" data-target="206" data-speed="10">0
       </h1>
       <h1>kmph</h1>
     </div>
   </section>
 </body>
+
 </html>
