--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
     <div class="header-body">
       <h1>Bugatti Chiron Super Sport 300+</h1>
       <p>
-        O monstro sobre rodas é equipado com um motor W16 quadriturbo de 8.0
-        litros, capaz de render insanos 1.600 cv de potência e colossais 163,1
-        kgf. m torque.
+        Carro mais rápido do mundo, <br />
+        teve sua produção encerrada.
       </p>
     </div>
   </header>
   <section class="about">
     <div class="heading">
       <h2>
-        Carro mais rápido do mundo, <br />
-        teve sua produção encerrada.
+        O monstro sobre rodas é equipado  <br />
+        com um motor W16 quadriturbo de 8.0
+        litros
       </h2>
       <p>
         A Bugatti anunciou o Super Sport 300+ em setembro de 2019, pouco
