--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bugatti Chiron Super Sport 300+</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="website icon" type="png"
-    href="assets/imgs/simbolo.png.png">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="website icon" type="png" href="assets/imgs/simbolo.png.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -27,16 +28,13 @@
     </nav>
     <div class="header-body">
       <h1>Bugatti Chiron Super Sport 300+</h1>
-      <p>
-        Carro mais rápido do mundo, <br />
-        teve sua produção encerrada.
-      </p>
+
     </div>
   </header>
   <section class="about">
     <div class="heading">
       <h2>
-        O monstro sobre rodas é equipado  <br />
+        O monstro sobre rodas é equipado <br />
         com um motor W16 quadriturbo de 8.0
         litros
       </h2>
@@ -156,43 +154,7 @@
     </div>
     <div class="panel-lg"></div>
   </section>
-  <section class="car-stats">
-    <div>
-      <h1 class="counter" data-target="206" data-speed="10">0
-      </h1>
-      <h1>kmph</h1>
-      <h5>Máxima Velocidade</h5>
-    </div>
-    <div>
-      <h1 
-      class="counter"
-      data-target="7"
-      data-speed="500"
-      >0
-      </h1>
-      <h1>Engrenagens</h1>
-      <h5>Velocidade de Engrenagens</h5>
-    </div>
-    <div>
-      <h1 
-      class="counter"
-      data-target="473"
-      data-speed="1"
-      >0
-      </h1>
-      <h1>hp</h1>
-      <h5>Potência dos Cavalos</h5>
-    </div>
-   </div>
-   <div class="car">
-    <div class="circle">
-      <img src="assets/imgs/bugatti2.jpg" alt="car">
-      <div class="inner-md-circle"></div>
-      <div class="inner-sm-circle"></div>
-    </div>
-   </div>
-  </section>
-  </section>
+  
 </body>
 
 </html>
